--- a/index.css
+++ b/index.css
@@ -1,133 +1,160 @@
-body{
-	 margin-right: 150px;
-	 
-	background: #c31432;  /* fallback for old browsers */
-	 /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+.wrapper{
+	display:grid;
+	grid-template-columns:20% 80%;
+	grid-column-gap: 2em;
+	padding: 1em;
+}
 
-	background-attachment: fixed;
+body{
+	 margin:0%;
+	 width:100%;
+	 height:100vh;
+	font-family:"Exo",sans-serif;
+	color:#fff;
+	background: linear-gradient(-45deg,#636363, #a2ab58,#659999, #f4791f);
+	background-size: 400% 400%;
+	animation: gradientBG 8s ease infinite;
+}
+@keyframes gradientBG{
+	0%{
+		background-position: 0% 50%;
+	}
+	50%{
+		background-position: 100% 50%;
+	}
+	100%{
+		background-position: 0% 50%;
+	}
 }
 html{
 	scroll-behavior: smooth;
 }
 h2{
-	margin-left:21%;
-	font-size:600%;
-	color:black
+	margin-left:6%;
+	font-size:100%;
+	color:black;
+	position:relative;
 }
 p{
 	word-spacing: 10px;
-	margin-left:21%;
-	font-size:500%;
+	margin-left:6%;
+	font-size:100%;
 	color:white;
 }
 h1{
 	color:black;
 	font-family:verdana;
-	font-size:1000%;
+	font-size:40%;
 }
-h1:hover{
-	color: red;
-}
-
 img{
-	margin-left:15%;
-	border-radius: 50%;
+	margin-left:8%;
+	border-radius:50%;
 	margin-top:1%;
 }
 .button1{
-	background-image: linear-gradient(to left,#C4E538,#009432,#C4E538)
-	
-  border: none;
+	background-image: linear-gradient(to left,#FFC312,#EE5A24,#FFC312);
   padding: 15px 32px;
   text-decoration: none;
-  font-size: 100px;
+  font-size: 10px;
   margin: 4px 2px;
   cursor: pointer;
-  margin-top: 8%;
-  margin-left:25%;
+  margin-left:19%;
 }
 .button2{
-	background-image: linear-gradient(to left,#FFC312,#EE5A24,#FFC312)
+	background-image: linear-gradient(to left,#FFC312,#EE5A24,#FFC312);
 	
-  border: none;
   padding: 15px 32px;
   text-decoration: none;
-  font-size: 100px;
+  font-size: 10px;
   margin: 4px 2px;
   cursor: pointer;
-  margin-top:10%;
-  margin-left: 10%;
+  margin-left: 20%;
 }
 .button3{
-	background-image: linear-gradient(to left,#FFC312,#EE5A24,#FFC312)
+	background-image: linear-gradient(to left,#FFC312,#EE5A24,#FFC312);
 	
-  border: none;
+ 
   padding: 15px 32px;
   text-decoration: none;
-  font-size: 100px;
+  font-size: 10px;
   margin: 4px 2px;
   cursor: pointer;
-  margin-top:12%;
   margin-left:20%;
 }
 .button4{
-	background-image: linear-gradient(to left,#FFC312,#EE5A24,#FFC312)
+	background-image: linear-gradient(to left,#FFC312,#EE5A24,#FFC312);
 	
-  border: none;
+  
   padding: 15px 32px;
   text-decoration: none;
-  font-size: 100px;
+  font-size: 10px;
   margin: 4px 2px;
   cursor: pointer;
-  margin-top:14%;
+
   margin-left:20%;
 }
 .button5{
-	background-image: linear-gradient(to left,#FFC312,#EE5A24,#FFC312)
-	
-  border: none;
-  padding: 15px 32px;
+	background-image: linear-gradient(to left,#FFC312,#EE5A24,#FFC312);
+ 	padding: 15px 32px;
   text-decoration: none;
-  font-size: 100px;
+  font-size: 10px;
   margin: 4px 2px;
   cursor: pointer;
-  margin-top:16%;
-  margin-left:23%;
-}
-.highlight:hover{
-	color:rgb(182, 22, 222);
+  margin-left:21%;
 }
 .divide1{
-	float:left;
+	text-align: center;
+	float:middle;
 	width:50%;
 	display:inline-block;
 	color:black;
 	font-family:verdana;
-	font-size:1000%;
+	font-size:100%;
 }
 .divide2{
+	margin-left:45%;
 	display:inline-block;
+	height: 100%;
 	width:50%;
 	float:right;
 	color:black;
 	font-family:verdana;
-	font-size:1000%;
-	position:relative;
+	font-size:200%;
+	position:absolute;
 }
-.divide2::after{
-	content:' ';
-	width:0%;
-	height:7px;
-	background: #f12711;  /* fallback for old browsers */
-	background: -webkit-linear-gradient(to right, #f5af19, #f12711);  /* Chrome 10-25, Safari 5.1-6 */
-	background: linear-gradient(to right, #f5af19, #f12711); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-	background-color: red;
-	position: absolute;
-	bottom:0%;left:10%;right: 10%;
-	border-radius: 10px;
-	transition: all 200ms ease;
+.indent{
+	margin-left:6%;
 }
-.divide2:hover::after{
-	left:0%;
+#THREE{
+	margin-left:6%;
+}
+#FOUR{
+	margin-left:6%;
+}
+#FIVE{
+	margin-left:6%;
+}
+
+.imagine{
+	width: 20%;height: 20%;
+	border-radius: 8px;
+}
+.imagine2{
 	width:30%;
+	height:60%;border-radius: 8px;
+}
+@media screen and (max-width: 640px)
+{
+	body{
+		width:640px;
+	}
+	img{
+		display: block;
+	}
+	.wrapper{
+		grid-template-columns: 640px ;
+		grid-template-rows: 640px: 
+	}
+	
+	
 }
