--- a/index.css
+++ b/index.css
@@ -1,10 +1,9 @@
 .wrapper{
 	display:grid;
-	grid-template-columns:20% 80%;
+	grid-template-columns:20% 75%;
 	grid-column-gap: 2em;
 	padding: 1em;
 }
-
 body{
 	 margin:0%;
 	 width:100%;
@@ -136,25 +135,33 @@ img{
 }
 
 .imagine{
-	width: 20%;height: 20%;
+	width: 30%;height: 20%;
 	border-radius: 8px;
 }
 .imagine2{
-	width:30%;
-	height:60%;border-radius: 8px;
+	width:40%;
+	height:20%;border-radius: 8px;
 }
-@media screen and (max-width: 640px)
+@media screen and (max-width: 300px)
 {
-	body{
-		width:640px;
-	}
 	img{
 		display: block;
 	}
 	.wrapper{
-		grid-template-columns: 640px ;
-		grid-template-rows: 640px: 
+		grid-template-columns: 300px ;
+		font-size:70%;
+		grid-template-rows: 300px: 
 	}
 	
-	
+}
+@media screen and (max-width: 768px)
+{
+	img{
+		display: block;
+	}
+	.wrapper{
+		grid-template-columns:400px;
+		font-size:70%;
+		grid-template-rows: 368px: 
+	}
 }
